<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/string1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string1"
        app:layout_constraintTop_toTopOf="@id/string1" />
    <TextView
        android:id="@+id/string2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/string1" />
    <TextView
        android:id="@+id/string2.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string2"
        app:layout_constraintTop_toTopOf="@id/string2" />
    <TextView
        android:id="@+id/string3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/string2" />
    <TextView
        android:id="@+id/string3.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string3"
        app:layout_constraintTop_toTopOf="@id/string3" />
    <TextView
        android:id="@+id/string4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pause"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/string3" />
    <TextView
        android:id="@+id/string4.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string4"
        app:layout_constraintTop_toTopOf="@id/string4" />
    <TextView
        android:id="@+id/string5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/string4" />
    <TextView
        android:id="@+id/string5.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string5"
        app:layout_constraintTop_toTopOf="@id/string5" />
    <TextView
        android:id="@+id/string6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restart"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/string5" />
    <TextView
        android:id="@+id/string6.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string6"
        app:layout_constraintTop_toTopOf="@id/string6" />
    <TextView
        android:id="@+id/string7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destroy"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/string6" />
    <TextView
        android:id="@+id/string7.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNum"
        android:textSize="30sp"
        app:layout_constraintLeft_toRightOf="@id/string7"
        app:layout_constraintTop_toTopOf="@id/string7" />

    <Button
        android:id="@+id/resetCount"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/resetCount"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/string7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/resetCount2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/resetCount2"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@id/resetCount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>